k8s/Remote/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-devops-python
  namespace: namespace-devops-python

spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-devops-python
  template:
    metadata:
      labels:
        app: demo-devops-python
    spec:
      containers:
      - name: demo-devops-python
        image: freperush/demo-devops-python:latest
        ports:
        - containerPort: 8765
