k8s/Remote/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-devops-python-service
  namespace: namespace-devops-python
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
spec:
  selector:
    app: demo-devops-python
  ports:
    - name: http
      port: 80         
      targetPort: 8765  
  type: ClusterIP
