k8s/Remote/ingress.gke.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-devops-python-ingress
  namespace: namespace-devops-python
  annotations:
    kubernetes.io/ingress.class: "gce"  # Esto le dice a GKE que use el controlador clásico
spec:
  rules:
    - host: demo-devops-python.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-devops-python-service
                port:
                  number: 8765
